--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "@mui/x-date-pickers": "^7.19.0",
     "axios": "^1.7.7",
     "firebase": "^10.14.0",
     "prop-types": "^15.8.1",
